// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createVegaSpec > Bar Chart > should create a horizontal bar chart 1`] = `
{
  "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
  "background": "white",
  "data": {
    "values": [
      {
        "category": "A",
        "group": "Group 1",
        "value": 10,
      },
      {
        "category": "B",
        "group": "Group 1",
        "value": 20,
      },
      {
        "category": "C",
        "group": "Group 1",
        "value": 15,
      },
      {
        "category": "A",
        "group": "Group 2",
        "value": 5,
      },
      {
        "category": "B",
        "group": "Group 2",
        "value": 10,
      },
      {
        "category": "C",
        "group": "Group 2",
        "value": 25,
      },
    ],
  },
  "encoding": {
    "color": {
      "field": undefined,
      "scale": {
        "scheme": undefined,
      },
      "type": "nominal",
    },
    "tooltip": undefined,
    "x": {
      "bin": undefined,
      "field": "value",
      "scale": undefined,
      "stack": undefined,
      "title": "value",
      "type": "quantitative",
    },
    "xOffset": {
      "field": undefined,
    },
    "y": {
      "bin": undefined,
      "field": "category",
      "stack": undefined,
      "title": "category",
      "type": "nominal",
    },
  },
  "height": 300,
  "mark": {
    "type": "bar",
  },
  "title": "Test Chart",
  "width": 400,
}
`;

exports[`createVegaSpec > Bar Chart > should create a stacked bar chart with grouping 1`] = `
{
  "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
  "background": "white",
  "data": {
    "values": [
      {
        "category": "A",
        "group": "Group 1",
        "value": 10,
      },
      {
        "category": "B",
        "group": "Group 1",
        "value": 20,
      },
      {
        "category": "C",
        "group": "Group 1",
        "value": 15,
      },
      {
        "category": "A",
        "group": "Group 2",
        "value": 5,
      },
      {
        "category": "B",
        "group": "Group 2",
        "value": 10,
      },
      {
        "category": "C",
        "group": "Group 2",
        "value": 25,
      },
    ],
  },
  "encoding": {
    "color": {
      "field": "group",
      "scale": {
        "scheme": undefined,
      },
      "type": "nominal",
    },
    "tooltip": undefined,
    "x": {
      "bin": undefined,
      "field": "category",
      "stack": undefined,
      "title": "category",
      "type": "nominal",
    },
    "xOffset": undefined,
    "y": {
      "bin": undefined,
      "field": "value",
      "scale": undefined,
      "stack": true,
      "title": "value",
      "type": "quantitative",
    },
  },
  "height": 300,
  "mark": {
    "type": "bar",
  },
  "title": "Test Chart",
  "width": 400,
}
`;

exports[`createVegaSpec > Edge cases > should handle NONE_GROUP_BY for groupByColumn 1`] = `
{
  "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
  "background": "white",
  "data": {
    "values": [
      {
        "category": "A",
        "group": "Group 1",
        "value": 10,
      },
      {
        "category": "B",
        "group": "Group 1",
        "value": 20,
      },
      {
        "category": "C",
        "group": "Group 1",
        "value": 15,
      },
      {
        "category": "A",
        "group": "Group 2",
        "value": 5,
      },
      {
        "category": "B",
        "group": "Group 2",
        "value": 10,
      },
      {
        "category": "C",
        "group": "Group 2",
        "value": 25,
      },
    ],
  },
  "encoding": {
    "tooltip": undefined,
    "x": {
      "bin": undefined,
      "field": "category",
      "stack": undefined,
      "title": "category",
      "type": "nominal",
    },
    "xOffset": undefined,
    "y": {
      "bin": undefined,
      "field": "value",
      "scale": undefined,
      "stack": undefined,
      "title": "value",
      "type": "quantitative",
    },
  },
  "height": 300,
  "mark": {
    "type": "bar",
  },
  "title": "Test Chart",
  "width": 400,
}
`;

exports[`createVegaSpec > Edge cases > should handle missing xColumn field 1`] = `
{
  "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
  "background": "white",
  "data": {
    "values": [
      {
        "category": "A",
        "group": "Group 1",
        "value": 10,
      },
      {
        "category": "B",
        "group": "Group 1",
        "value": 20,
      },
      {
        "category": "C",
        "group": "Group 1",
        "value": 15,
      },
      {
        "category": "A",
        "group": "Group 2",
        "value": 5,
      },
      {
        "category": "B",
        "group": "Group 2",
        "value": 10,
      },
      {
        "category": "C",
        "group": "Group 2",
        "value": 25,
      },
    ],
  },
  "encoding": {
    "color": {
      "field": undefined,
      "scale": {
        "scheme": undefined,
      },
      "type": "nominal",
    },
    "tooltip": undefined,
    "x": {
      "bin": undefined,
      "field": undefined,
      "stack": undefined,
      "title": undefined,
      "type": "nominal",
    },
    "xOffset": {
      "field": undefined,
    },
    "y": {
      "bin": undefined,
      "field": "value",
      "scale": undefined,
      "stack": undefined,
      "title": "value",
      "type": "quantitative",
    },
  },
  "height": 300,
  "mark": {
    "type": "bar",
  },
  "title": "Test Chart",
  "width": 400,
}
`;

exports[`createVegaSpec > Edge cases > should handle missing yColumn field 1`] = `
{
  "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
  "background": "white",
  "data": {
    "values": [
      {
        "category": "A",
        "group": "Group 1",
        "value": 10,
      },
      {
        "category": "B",
        "group": "Group 1",
        "value": 20,
      },
      {
        "category": "C",
        "group": "Group 1",
        "value": 15,
      },
      {
        "category": "A",
        "group": "Group 2",
        "value": 5,
      },
      {
        "category": "B",
        "group": "Group 2",
        "value": 10,
      },
      {
        "category": "C",
        "group": "Group 2",
        "value": 25,
      },
    ],
  },
  "encoding": {
    "color": {
      "field": undefined,
      "scale": {
        "scheme": undefined,
      },
      "type": "nominal",
    },
    "tooltip": undefined,
    "x": {
      "bin": undefined,
      "field": "category",
      "stack": undefined,
      "title": "category",
      "type": "nominal",
    },
    "xOffset": {
      "field": undefined,
    },
    "y": {
      "bin": undefined,
      "field": undefined,
      "scale": undefined,
      "stack": undefined,
      "title": undefined,
      "type": "quantitative",
    },
  },
  "height": 300,
  "mark": {
    "type": "bar",
  },
  "title": "Test Chart",
  "width": 400,
}
`;

exports[`createVegaSpec > Line Chart > should create a basic line chart spec 1`] = `
{
  "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
  "background": "white",
  "data": {
    "values": [
      {
        "category": "A",
        "group": "Group 1",
        "value": 10,
      },
      {
        "category": "B",
        "group": "Group 1",
        "value": 20,
      },
      {
        "category": "C",
        "group": "Group 1",
        "value": 15,
      },
      {
        "category": "A",
        "group": "Group 2",
        "value": 5,
      },
      {
        "category": "B",
        "group": "Group 2",
        "value": 10,
      },
      {
        "category": "C",
        "group": "Group 2",
        "value": 25,
      },
    ],
  },
  "encoding": {
    "color": {
      "field": undefined,
      "scale": {
        "scheme": undefined,
      },
      "type": "nominal",
    },
    "tooltip": undefined,
    "x": {
      "bin": undefined,
      "field": "category",
      "stack": undefined,
      "title": "category",
      "type": "nominal",
    },
    "xOffset": {
      "field": undefined,
    },
    "y": {
      "bin": undefined,
      "field": "value",
      "scale": undefined,
      "stack": undefined,
      "title": "value",
      "type": "quantitative",
    },
  },
  "height": 300,
  "mark": {
    "type": "line",
  },
  "title": "Test Chart",
  "width": 400,
}
`;

exports[`createVegaSpec > Pie Chart > should create a pie chart with tooltips 1`] = `
{
  "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
  "background": "white",
  "data": {
    "values": [
      {
        "category": "A",
        "group": "Group 1",
        "value": 10,
      },
      {
        "category": "B",
        "group": "Group 1",
        "value": 20,
      },
      {
        "category": "C",
        "group": "Group 1",
        "value": 15,
      },
      {
        "category": "A",
        "group": "Group 2",
        "value": 5,
      },
      {
        "category": "B",
        "group": "Group 2",
        "value": 10,
      },
      {
        "category": "C",
        "group": "Group 2",
        "value": 25,
      },
    ],
  },
  "encoding": {
    "color": {
      "bin": undefined,
      "field": "value",
      "scale": {
        "scheme": undefined,
      },
      "stack": undefined,
      "title": "value",
      "type": "quantitative",
    },
    "theta": {
      "bin": undefined,
      "field": "category",
      "stack": undefined,
      "title": "category",
      "type": "nominal",
    },
    "tooltip": [
      {
        "aggregate": undefined,
        "field": "category",
        "format": undefined,
      },
      {
        "aggregate": undefined,
        "field": "value",
        "format": ".2f",
      },
    ],
    "xOffset": undefined,
  },
  "height": 300,
  "mark": {
    "type": "arc",
  },
  "title": "Test Chart",
  "width": 400,
}
`;

exports[`createVegaSpec > Scatter Chart > should create a scatter chart with grouping 1`] = `
{
  "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
  "background": "white",
  "data": {
    "values": [
      {
        "category": "A",
        "group": "Group 1",
        "value": 10,
      },
      {
        "category": "B",
        "group": "Group 1",
        "value": 20,
      },
      {
        "category": "C",
        "group": "Group 1",
        "value": 15,
      },
      {
        "category": "A",
        "group": "Group 2",
        "value": 5,
      },
      {
        "category": "B",
        "group": "Group 2",
        "value": 10,
      },
      {
        "category": "C",
        "group": "Group 2",
        "value": 25,
      },
    ],
  },
  "encoding": {
    "color": {
      "field": "group",
      "scale": {
        "scheme": undefined,
      },
      "type": "nominal",
    },
    "tooltip": undefined,
    "x": {
      "bin": undefined,
      "field": "category",
      "stack": undefined,
      "title": "category",
      "type": "nominal",
    },
    "xOffset": {
      "field": "group",
    },
    "y": {
      "bin": undefined,
      "field": "value",
      "scale": undefined,
      "stack": undefined,
      "title": "value",
      "type": "quantitative",
    },
  },
  "height": 300,
  "mark": {
    "type": "point",
  },
  "title": "Test Chart",
  "width": 400,
}
`;

exports[`createVegaSpec > Theme variations > should create a chart with dark theme 1`] = `
{
  "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
  "background": "dark",
  "data": {
    "values": [
      {
        "category": "A",
        "group": "Group 1",
        "value": 10,
      },
      {
        "category": "B",
        "group": "Group 1",
        "value": 20,
      },
      {
        "category": "C",
        "group": "Group 1",
        "value": 15,
      },
      {
        "category": "A",
        "group": "Group 2",
        "value": 5,
      },
      {
        "category": "B",
        "group": "Group 2",
        "value": 10,
      },
      {
        "category": "C",
        "group": "Group 2",
        "value": 25,
      },
    ],
  },
  "encoding": {
    "color": {
      "field": undefined,
      "scale": {
        "scheme": undefined,
      },
      "type": "nominal",
    },
    "tooltip": undefined,
    "x": {
      "bin": undefined,
      "field": "category",
      "stack": undefined,
      "title": "category",
      "type": "nominal",
    },
    "xOffset": {
      "field": undefined,
    },
    "y": {
      "bin": undefined,
      "field": "value",
      "scale": undefined,
      "stack": undefined,
      "title": "value",
      "type": "quantitative",
    },
  },
  "height": 300,
  "mark": {
    "type": "bar",
  },
  "title": "Test Chart",
  "width": 400,
}
`;

exports[`createVegaSpec > should create a bar chart with binning 1`] = `
{
  "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
  "background": "white",
  "data": {
    "values": [
      {
        "category": "A",
        "group": "Group 1",
        "value": 10,
      },
      {
        "category": "B",
        "group": "Group 1",
        "value": 20,
      },
      {
        "category": "C",
        "group": "Group 1",
        "value": 15,
      },
      {
        "category": "A",
        "group": "Group 2",
        "value": 5,
      },
      {
        "category": "B",
        "group": "Group 2",
        "value": 10,
      },
      {
        "category": "C",
        "group": "Group 2",
        "value": 25,
      },
    ],
  },
  "encoding": {
    "color": {
      "field": undefined,
      "scale": {
        "scheme": undefined,
      },
      "type": "nominal",
    },
    "tooltip": undefined,
    "x": {
      "bin": true,
      "field": "category",
      "stack": undefined,
      "title": "category",
      "type": "nominal",
    },
    "xOffset": {
      "field": undefined,
    },
    "y": {
      "bin": undefined,
      "field": "value",
      "scale": undefined,
      "stack": undefined,
      "title": "value",
      "type": "quantitative",
    },
  },
  "height": 300,
  "mark": {
    "type": "bar",
  },
  "title": "Test Chart",
  "width": 400,
}
`;
